# buddi

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  CONTRIBUTING.md  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  pytest.ini  python-api.html  search.html  searchindex.js
.github/workflows/: docs.yml  tests.yml
_api/: buddi.data.buddi4data.html  buddi.data.html  buddi.dataset.buddi3_dataset.html  buddi.dataset.buddi4_dataset.html  buddi.dataset.data_split.html  buddi.dataset.dataset_generator.html  buddi.dataset.html  buddi.html  buddi.models.buddi3_class.html  buddi.models.buddi4.html  buddi.models.buddi4_class.html  buddi.models.buddi_abstract_class.html  buddi.models.components.branches.html  buddi.models.components.html  buddi.models.components.layers.html  buddi.models.components.losses.html  buddi.models.components.wrapped_branches.html  buddi.models.fit.html  buddi.models.html  buddi.plotting.html  buddi.plotting.plot_latent_space.html  buddi.plotting.plot_loss.html  buddi.preprocessing.generate_pseudo_bulks.html  buddi.preprocessing.html  buddi.preprocessing.sc_augmentor.html  buddi.preprocessing.utils.html  buddi_v2.data.buddi4data.html  buddi_v2.data.html  buddi_v2.dataset.buddi3_dataset.html  buddi_v2.dataset.buddi4_dataset.html  buddi_v2.dataset.data_split.html  buddi_v2.dataset.dataset_generator.html  buddi_v2.dataset.html  buddi_v2.html  buddi_v2.models.buddi3_class.html  buddi_v2.models.buddi4.html  buddi_v2.models.buddi4_class.html  buddi_v2.models.buddi_abstract_class.html  buddi_v2.models.components.branches.html  buddi_v2.models.components.html  (+12 more)
_sources/_api/: buddi.data.buddi4data.rst.txt  buddi.data.rst.txt  buddi.dataset.buddi3_dataset.rst.txt  buddi.dataset.buddi4_dataset.rst.txt  buddi.dataset.data_split.rst.txt  buddi.dataset.dataset_generator.rst.txt  buddi.dataset.rst.txt  buddi.models.buddi3_class.rst.txt  buddi.models.buddi4.rst.txt  buddi.models.buddi4_class.rst.txt  buddi.models.buddi_abstract_class.rst.txt  buddi.models.components.branches.rst.txt  buddi.models.components.layers.rst.txt  buddi.models.components.losses.rst.txt  buddi.models.components.rst.txt  buddi.models.components.wrapped_branches.rst.txt  buddi.models.fit.rst.txt  buddi.models.rst.txt  buddi.plotting.plot_latent_space.rst.txt  buddi.plotting.plot_loss.rst.txt  buddi.plotting.rst.txt  buddi.preprocessing.generate_pseudo_bulks.rst.txt  buddi.preprocessing.rst.txt  buddi.preprocessing.sc_augmentor.rst.txt  buddi.preprocessing.utils.rst.txt  buddi.rst.txt  buddi_v2.data.buddi4data.rst.txt  buddi_v2.data.rst.txt  buddi_v2.dataset.buddi3_dataset.rst.txt  buddi_v2.dataset.buddi4_dataset.rst.txt  buddi_v2.dataset.data_split.rst.txt  buddi_v2.dataset.dataset_generator.rst.txt  buddi_v2.dataset.rst.txt  buddi_v2.models.buddi3_class.rst.txt  buddi_v2.models.buddi4.rst.txt  buddi_v2.models.buddi4_class.rst.txt  buddi_v2.models.buddi_abstract_class.rst.txt  buddi_v2.models.components.branches.rst.txt  buddi_v2.models.components.layers.rst.txt  buddi_v2.models.components.losses.rst.txt  (+12 more)
docs/src/: conf.py  python-api.md
examples/: 1.prepare_pseudobulk.ipynb  1.prepare_pseudobulk.py  2.format_bulk.ipynb  2.format_bulk.py  3.legacy_prepare_train_data.ipynb  4.legacy_train_buddi4.ipynb  4.legacy_train_buddi4.py
examples/example_buddi3/: 1.prepare_buddi3_train_data.ipynb  1.prepare_buddi3_train_data.py  2.train_buddi3.ipynb  2.train_buddi3.py
examples/example_buddi4/: 1.prepare_buddi4_train_data.ipynb  1.prepare_buddi4_train_data.py  2b.train_buddi4_class.ipynb  2b.train_buddi4_class.py
examples/example_data/bulk_data/: GSE132040_MACA_Bulk_metadata.csv
examples/example_data/preprocessed_data/: README.md
src/buddi/: README.md  __init__.py  _version.py
src/buddi/data/: README.md  buddi4data.py
src/buddi/dataset/: README.md  buddi3_dataset.py  buddi4_dataset.py  data_split.py
src/buddi/models/: README.md  __init__.py  buddi3_class.py  buddi4.py  buddi4_class.py  buddi_abstract_class.py  buddi_class.py  fit.py
src/buddi/models/components/: layers.py  losses.py  wrapped_branches.py
src/buddi/models/legacy/: buddi4.py
src/buddi/plotting/: __init__.py  plot_data.py  plot_loss.py
src/buddi/preprocessing/: README.md  __init__.py  generate_pseudo_bulks.py  sc_augmentor.py  utils.py
src/buddi_v2/: README.md
src/buddi_v2/data/: BuDDINData.py  __init__.py
src/buddi_v2/dataset/: README.md  __init__.py  dataset_generator.py
src/buddi_v2/models/: README.md  buddi3_class.py  buddi4.py  fit.py
src/buddi_v2/models/components/: branches.py
src/buddi_v2/plotting/: plot_latent_space.py
src/buddi_v2/preprocessing/: README.md  __init__.py  sc_augmentor.py
tests/: conftest.py  test_basic_import.py  test_gpu_enabled.py  test_notebooks.py  test_tf_apple_metal.py
