[build-system]
build-backend = "setuptools.build_meta"
requires = [ "setuptools>=61", "setuptools-scm>=8", "wheel" ]

[project]
name = "buddi"
description = "BuDDI: Bulk Deconvolution with Domain Invariance to predict cell-type-specific perturbations from bulk"
readme = "README.md"
maintainers = [
  { name = "David Bunten", email = "DAVE.BUNTEN@cuanschutz.edu" },
  { name = "Faisal Alquaddoomi", email = "FAISAL.ALQUADDOOMI@cuanschutz.edu" },
]
authors = [
  { name = "Natalie R. Davidson", email = "NATALIE.DAVIDSON@cuanschutz.edu" },
  { name = "Weishan Li", email = "WEISHAN.2.LI@CUANSCHUTZ.EDU" },
]
requires-python = ">=3.9,<3.11"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
]
dynamic = [ "version" ]
dependencies = [
  "anndata>=0.10.9",
  "ipython>=8.18.1",
  "matplotlib>=3.9.4",
  "numpy>=1.26.4",
  "pandas>=2.3.3",
  "poethepoet>=0.37",
  "scikit-learn>=1.6.1",
  "seaborn>=0.13.2",
  # macOS Intel: cap at the last line that shipped x86_64 wheels
  "tensorflow>=2.16,<2.17; platform_system=='Darwin' and platform_machine=='x86_64'",
  # Default TensorFlow: CPU-capable everywhere; no CUDA deps unless [and-cuda] is requested.
  "tensorflow>=2.16,<3; platform_system!='Darwin' or platform_machine=='arm64'",
  "tqdm>=4.67.1",
  "umap-learn>=0.5.11",
]
# JupyterLab and dependencies for running example notebooks
optional-dependencies.notebooks = [
  "ipykernel>=6.29",
  "ipywidgets>=8.1.8",
  "joblib>=1",
  "jupyterlab>=3",
  "jupyterlab-widgets>=3.0.16",
  "matplotlib-venn>=0.11",
  "scanpy>=1.9",
  "scipy>=1.5",
]
# NVIDIA CUDA path (Linux + WSL2). Installs TF plus CUDA-related Python deps.
# Works in WSL2 because platform_system inside WSL2 is 'Linux'.
optional-dependencies.with-gpu = [
  # Linux/WSL2 CUDA: pull in TF plus CUDA-related python deps via the official extra
  "tensorflow[and-cuda]>=2.16,<3; platform_system=='Linux'",
  # Apple Silicon Metal plugin (base TF already installed by the default deps above)
  "tensorflow-metal>=1.2; platform_system=='Darwin' and platform_machine=='arm64'",
]

[dependency-groups]
dev = [
  "papermill>=2.5",
  "pytest>=8.4.2",
]
docs = [
  "myst-nb>=1.2",
  "pydata-sphinx-theme>=0.16.1",
  "sphinx>=7,<8; python_version<'3.11'",
  "sphinx>=8.2.3; python_version>='3.11'",
]

[tool.setuptools]
package-dir = { "" = "src" }
packages.find.where = [ "src" ]
packages.find.include = [ "buddi*" ]

[tool.setuptools_scm]
root = "."
version_scheme = "no-guess-dev"
local_scheme = "no-local-version"
version_file = "src/buddi/_version.py"

[tool.uv]
default-groups = [ "dev", "docs" ]

[tool.ruff]
extend-exclude = [ "*.ipynb" ]

[tool.pytest]
ini_options.testpaths = [ "tests" ]
ini_options.python_files = [ "test_*.py" ]
ini_options.markers = [
  "smoke: mark test as smoke test",
  "regression: mark test as regression test",
  "metal_enabled: mark test as requiring metal enabled device",
]

[tool.poe]
tasks.install-kernel = "python -m ipykernel install --user --name buddi --display-name 'Python (buddi)'"
tasks.run-notebooks.shell = "export REPO_ROOT=$( realpath ${POE_ROOT} ) ; python -m jupyter lab ./"
tasks.run-nb-notebooks.shell = "export REPO_ROOT=$( realpath ${POE_ROOT} ) ; time python -m pytest tests/test_notebooks.py -v --durations=0 --run-slow"
tasks.test-notebooks = [
  "install-kernel",
  "run-nb-notebooks",
]
tasks.buddi-lab = [
  "install-kernel",
  "run-notebooks",
]
tasks.run-notebooks-papermill.help = "Run example notebooks with papermill, outputting to examples_output/ and using the buddi kernel"
tasks.run-notebooks-papermill.shell = """
export REPO_ROOT=$( realpath ${POE_ROOT} ) ;
mkdir -p examples_output/example_buddi3/ examples_output/example_buddi4/ ;
find . -name 'examples/*.ipynb' -not -path '*/.ipynb_checkpoints/*' | \
xargs -n 1 -I {} python -m papermill {} examples_output/{} --kernel buddi
"""

[tool.vulture]
min_confidence = 90
paths = [ "src/buddi", "tests" ]
ignore_names = [ "training", "n_bulks", "n_cells" ]
